@@ -315,6 +315,7 @@ struct options
     int max_allocs_per_node;    /* Maximum number of allocations considered at each node in the tree-decomposition based register allocator */
     int noOptsdccInAsm;         /* Do not emit .optsdcc in asm */
     int salloc;
+    int dump_graphs;
   };
 
 /* forward definition for variables accessed globally */
