@@ -298,7 +298,7 @@ create_cfg(cfg_t &cfg, con_t &con, ebbIndex *ebbi)
         if(ic->op == '>' || ic->op == '<' || ic->op == EQ_OP || ic->op == '^' || ic->op == '|' || ic->op == BITWISEAND)
           {
             iCode *ifx;
-            if (!TARGET_IS_HC08 && ifx = ifxForOp (IC_RESULT (ic), ic)) // Todo: Have a look at this for hc08 again when using the new register allocator. For now (stack allcoator only) it works this way.
+            if (!TARGET_IS_HC08 && (ifx = ifxForOp (IC_RESULT (ic), ic))) // Todo: Have a look at this for hc08 again when using the new register allocator. For now (stack allcoator only) it works this way.
               ifx->generated = 1;
           }
 
