@@ -7,7 +7,11 @@
 	  src/z80/gen.h,
 	  src/hc08/ralloc.h,
 	  src/hc08/ralloc.c,
-	  src/hc08/ralloc2.cc:
+	  src/hc08/ralloc2.cc,
+	  src/SDCCglobl.h,
+	  src/z80/z80.h,
+	  src/z80/main.c,
+	  src/SDCCmain.c:
 	  Preparations for enabling better stack handling for all ports.
 
 2012-01-04 Philipp Klaus Krause <pkk AT spth.de>
